--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:id="@+id/company_icon"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/ic_app_icon_foreground"
+        android:src="@drawable/app_logo"
         app:layout_constraintBottom_toTopOf="@+id/company_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
@@ -117,6 +117,7 @@
         android:id="@+id/txt_noAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:text="Don't have an account?"
         app:layout_constraintBottom_toTopOf="@id/btn_google"
         app:layout_constraintEnd_toEndOf="parent"
@@ -129,7 +130,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Google"
-        app:icon="@mipmap/ic_google_foreground"
+        app:icon="@drawable/icon_google"
         app:layout_constraintBottom_toTopOf="@id/btn_signup"
         app:layout_constraintEnd_toStartOf="@id/btn_facebook"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -142,7 +143,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Facebook"
-
         app:icon="@drawable/ic_facebook"
         app:layout_constraintBottom_toTopOf="@id/btn_signup"
         app:layout_constraintEnd_toEndOf="parent"
