--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="32"
+    android:viewportHeight="32">
+  <group android:scaleX="0.49"
+      android:scaleY="0.49"
+      android:translateX="8.16"
+      android:translateY="8.16">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M8,1C4.14,1 1,4.09 1,7.89c0,3.58 5.66,9.2 6.3,9.83C7.5,17.91 7.75,18 8,18s0.5,-0.09 0.7,-0.28c0.64,-0.63 6.3,-6.25 6.3,-9.83C15,4.09 11.86,1 8,1z"
+        android:fillColor="#3F51B5"/>
+    <path
+        android:pathData="M10,7.89c0,1.11 -0.9,2 -2,2S6,9 6,7.89c0,-1.1 0.9,-2 2,-2S10,6.79 10,7.89z"
+        android:fillColor="#2197F3"/>
+    <path
+        android:pathData="M30,19h-5V2c0,-0.55 -0.45,-1 -1,-1h-6c-0.55,0 -1,0.45 -1,1v17H2c-0.55,0 -1,0.45 -1,1v6c0,0.55 0.45,1 1,1h15v3c0,0.55 0.45,1 1,1h6c0.55,0 1,-0.45 1,-1v-3h5c0.55,0 1,-0.45 1,-1v-6C31,19.45 30.55,19 30,19z"
+        android:fillColor="#2197F3"/>
+  </group>
 </vector>
