--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4100AD"
+    android:background="@drawable/login_background"
     android:padding="20dp"
     tools:context=".login.view.LoginActivity">
 
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:textColor="@color/white"
+        android:textColor="#2F23B4"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/textfield_user"
@@ -43,6 +43,7 @@
         style="?attr/textInputFilledStyle"
         android:hint="User"
         android:textColorHint="@color/white"
+        app:boxStrokeWidth="0dp"
         app:layout_constraintBottom_toTopOf="@id/textfield_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +52,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#5D21BE"
+            android:background="#2F23B4"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -63,6 +64,7 @@
         style="?attr/textInputFilledStyle"
         android:hint="Password"
         android:textColorHint="@color/white"
+        app:boxStrokeWidth="0dp"
         app:endIconMode="password_toggle"
         app:endIconTint="@color/white"
         app:layout_constraintBottom_toTopOf="@id/check_rememberme"
@@ -73,7 +75,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#5D21BE"
+            android:background="#2F23B4"
             android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -83,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Remind me!"
-        android:textColor="@color/white"
+        android:textColor="#2F23B4"
         app:layout_constraintBottom_toTopOf="@id/btn_login"
         app:layout_constraintEnd_toStartOf="@id/btn_forgotpassword"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +97,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgot Password?"
-        android:textColor="@color/white"
+        android:textColor="#2F23B4"
         app:layout_constraintBottom_toTopOf="@id/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1"
@@ -108,6 +110,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Login"
+        android:backgroundTint="#2F23B4"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@id/txt_noAccount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -131,6 +135,8 @@
         android:layout_height="wrap_content"
         android:text="Google"
         android:layout_marginEnd="5dp"
+        android:backgroundTint="@color/white"
+        android:textColor="#2F23B4"
         app:icon="@drawable/icon_google"
         app:iconGravity="textStart"
         app:iconTintMode="multiply"
@@ -145,6 +151,8 @@
         style="@style/Widget.Material3.Button.ElevatedButton.Icon"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        android:textColor="#2F23B4"
         android:text="Facebook"
         app:iconTintMode="multiply"
         app:iconGravity="textStart"
@@ -160,6 +168,8 @@
         style="@style/Widget.Material3.Button.ElevatedButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        android:textColor="#2F23B4"
         android:text="Sign Up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
