buttons are now a square

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -112,6 +112,7 @@
         android:text="Login"
         android:backgroundTint="#2F23B4"
         android:textColor="@color/white"
+        app:cornerRadius="10dp"
         app:layout_constraintBottom_toTopOf="@id/txt_noAccount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -140,6 +141,7 @@
         app:icon="@drawable/icon_google"
         app:iconGravity="textStart"
         app:iconTintMode="multiply"
+        app:cornerRadius="10dp"
         app:layout_constraintBottom_toTopOf="@id/btn_signup"
         app:layout_constraintEnd_toStartOf="@id/btn_facebook"
         app:layout_constraintStart_toStartOf="parent"
@@ -157,6 +159,7 @@
         app:iconTintMode="multiply"
         app:iconGravity="textStart"
         app:icon="@drawable/ic_facebook"
+        app:cornerRadius="10dp"
         app:layout_constraintBottom_toTopOf="@id/btn_signup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/btn_google"
@@ -170,6 +173,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
         android:textColor="#2F23B4"
+        app:cornerRadius="10dp"
         android:text="Sign Up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
