--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,65 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="seed">#2F23B4</color>
+    <color name="md_theme_light_primary">#504AD3</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#E2DFFF</color>
+    <color name="md_theme_light_onPrimaryContainer">#0E006A</color>
+    <color name="md_theme_light_secondary">#5754A8</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#E2DFFF</color>
+    <color name="md_theme_light_onSecondaryContainer">#100563</color>
+    <color name="md_theme_light_tertiary">#7A5368</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#FFD8EA</color>
+    <color name="md_theme_light_onTertiaryContainer">#2F1124</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FFFBFF</color>
+    <color name="md_theme_light_onBackground">#1C1B1F</color>
+    <color name="md_theme_light_surface">#FFFBFF</color>
+    <color name="md_theme_light_onSurface">#1C1B1F</color>
+    <color name="md_theme_light_surfaceVariant">#E4E1EC</color>
+    <color name="md_theme_light_onSurfaceVariant">#47464F</color>
+    <color name="md_theme_light_outline">#787680</color>
+    <color name="md_theme_light_inverseOnSurface">#F3EFF4</color>
+    <color name="md_theme_light_inverseSurface">#313034</color>
+    <color name="md_theme_light_inversePrimary">#C3C0FF</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#504AD3</color>
+    <color name="md_theme_light_outlineVariant">#C8C5D0</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_dark_primary">#C3C0FF</color>
+    <color name="md_theme_dark_onPrimary">#1D00A5</color>
+    <color name="md_theme_dark_primaryContainer">#372DBB</color>
+    <color name="md_theme_dark_onPrimaryContainer">#E2DFFF</color>
+    <color name="md_theme_dark_secondary">#C3C0FF</color>
+    <color name="md_theme_dark_onSecondary">#272377</color>
+    <color name="md_theme_dark_secondaryContainer">#3F3C8F</color>
+    <color name="md_theme_dark_onSecondaryContainer">#E2DFFF</color>
+    <color name="md_theme_dark_tertiary">#EAB9D2</color>
+    <color name="md_theme_dark_onTertiary">#472639</color>
+    <color name="md_theme_dark_tertiaryContainer">#603C50</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFD8EA</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#1C1B1F</color>
+    <color name="md_theme_dark_onBackground">#E5E1E6</color>
+    <color name="md_theme_dark_surface">#1C1B1F</color>
+    <color name="md_theme_dark_onSurface">#E5E1E6</color>
+    <color name="md_theme_dark_surfaceVariant">#47464F</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C8C5D0</color>
+    <color name="md_theme_dark_outline">#928F9A</color>
+    <color name="md_theme_dark_inverseOnSurface">#1C1B1F</color>
+    <color name="md_theme_dark_inverseSurface">#E5E1E6</color>
+    <color name="md_theme_dark_inversePrimary">#504AD3</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#C3C0FF</color>
+    <color name="md_theme_dark_outlineVariant">#47464F</color>
+    <color name="md_theme_dark_scrim">#000000</color>
 </resources>
