--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,16 +7,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="home.view.HomeActivity"
-    android:orientation="vertical"
     style="@style/Base.Theme.TakeMe">
 
     <TextView
-        android:id="@+id/test"
+        android:id="@+id/txt_test"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="Home Activity"
         android:gravity="center"
+        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
         >
 
     </TextView>
@@ -26,6 +29,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:menu="@menu/home_navigation_menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txt_test"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
