--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -9,7 +9,7 @@
     <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/map"
+        android:id="@+id/map_fragment"
         tools:context="home.view.map.MapFragment"
         android:name="com.google.android.gms.maps.SupportMapFragment" />
 
@@ -26,32 +26,32 @@
             android:id="@+id/drag_handle"
             style="@style/Widget.Material3.BottomSheet"
             android:layout_width="match_parent"
-            android:layout_height="15dp"
+            android:layout_height="match_parent"
             android:paddingBottom="0dp" />
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/searchbar_scrolling_view_behavior">
+            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
             <!-- Screen content goes here. -->
-        </androidx.core.widget.NestedScrollView>
-
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <com.google.android.material.search.SearchBar
-                android:id="@+id/search_bar"
+            <com.google.android.material.appbar.AppBarLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/sheet_home_search_hint"
-                />
-        </com.google.android.material.appbar.AppBarLayout>
+                android:layout_height="wrap_content">
+                <com.google.android.material.search.SearchBar
+                    android:id="@+id/search_bar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:menu="@menu/search_bar_menu"
+                    android:hint="@string/sheet_home_search_hint"
+                    />
+            </com.google.android.material.appbar.AppBarLayout>
+        </androidx.core.widget.NestedScrollView>
 
         <com.google.android.material.search.SearchView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
+            android:hint="test"
             app:layout_anchor="@id/search_bar">
-            <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
         </com.google.android.material.search.SearchView>
 
         <Button
