--- a/app/src/main/res/values/ic_app_icon_background.xml
+++ b/app/src/main/res/values/ic_app_icon_background.xml
@@ -1,2 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <color name="ic_app_icon_background">#4100AD</color>
+</resources>
