Material Design Animation for FAB weather button added and folders have been moved to the general package of the app

--- a/app/src/main/res/layout/activity_weather_report.xml
+++ b/app/src/main/res/layout/activity_weather_report.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/Base.Theme.TakeMe"
-    tools:context=".login.weather_forecast.view.WeatherReportActivity">
+    tools:context=".weather_forecast.view.WeatherReportActivity">
 
     <WebView
         android:id="@+id/webView_weather_forecast"
