--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -34,6 +34,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="80dp"
         android:contentDescription="@string/btn_map_forecast"
+        android:transitionName="transition_weather_forecast"
         app:srcCompat="@drawable/ic_forecast_sunny"
         app:backgroundTint="@color/design_default_color_on_primary"
         app:tint="@null"
