Added card to show the route travelled and a fav button all with room db working

--- a/app/src/main/res/layout/activity_arrived_to_destination.xml
+++ b/app/src/main/res/layout/activity_arrived_to_destination.xml
@@ -23,14 +23,83 @@
 
     <TextView
         android:id="@+id/txt_congrats"
+        android:layout_margin="24dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/arrived_destination_anim"
+        app:layout_constraintBottom_toTopOf="@id/fav_card"
         android:text="@string/txt_arrived_to_destination_screen"
         android:textSize="40sp"
         android:textAlignment="center"/>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/fav_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:checkable="true"
+        android:layout_margin="24dp"
+        style="?attr/materialCardViewElevatedStyle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txt_congrats"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="14dp">
+            <TextView
+                android:id="@+id/txt_fav_card_title"
+                android:paddingBottom="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/txt_start_location"
+                android:text="@string/txt_card_title"
+                android:textSize="20sp"
+                />
+
+            <TextView
+                android:id="@+id/txt_start_location"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/fav_card_start_location"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/btn_fav_route"
+                app:layout_constraintTop_toBottomOf="@id/txt_fav_card_title"
+                app:layout_constraintBottom_toTopOf="@id/txt_end_location"/>
+
+            <TextView
+                android:id="@+id/txt_end_location"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/fav_card_end_location"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/btn_fav_route"
+                app:layout_constraintTop_toBottomOf="@id/txt_start_location"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/btn_fav_route"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/fab_favourite_button"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/txt_start_location"
+                app:layout_constraintTop_toBottomOf="@id/txt_fav_card_title"
+                app:srcCompat="@drawable/not_fav_route"
+                app:tint="@null" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
