--- a/app/src/main/res/layout/activity_arrived_to_destination.xml
+++ b/app/src/main/res/layout/activity_arrived_to_destination.xml
@@ -38,6 +38,7 @@
         android:id="@+id/fav_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txt_congrats"
