--- a/app/src/main/res/layout/fragment_fav.xml
+++ b/app/src/main/res/layout/fragment_fav.xml
@@ -15,12 +15,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/fav_list"/>
+        app:layout_constraintBottom_toTopOf="@+id/fav_list_recycler_view"/>
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fav_list"
-        android:layout_width="match_parent"
+        android:id="@+id/fav_list_recycler_view"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:gravity="center"
         app:layout_constraintTop_toBottomOf="@id/fav_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
