--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -100,6 +100,8 @@
                 android:id="@+id/edit_profile_section"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
                 app:details="@string/profile_settings_edit_profile_details"
                 app:iconResource="@drawable/user_settings_item"
                 app:itemTitle="@string/profile_settings_edit_profile" />
@@ -108,6 +110,8 @@
                 android:id="@+id/change_password_section"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
                 app:details="@string/profile_settings_change_password_details"
                 app:iconResource="@drawable/key_password_settings"
                 app:itemTitle="@string/profile_settings_change_password" />
@@ -116,6 +120,8 @@
                 android:id="@+id/terms_of_use_section"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
                 app:details="@string/profile_settings_terms_of_use_details"
                 app:iconResource="@drawable/user_terms_settings"
                 app:itemTitle="@string/profile_settings_terms_of_use" />
@@ -124,6 +130,8 @@
                 android:id="@+id/add_card_section"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
                 app:details="@string/profile_settings_add_card_details"
                 app:iconResource="@drawable/credit_card_settings"
                 app:itemTitle="@string/profile_settings_add_card" />
@@ -156,6 +164,8 @@
                 android:id="@+id/notifications_profile_section"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
                 app:details="@string/profile_settings_notification_details"
                 app:iconResource="@drawable/notification_settings"
                 app:itemTitle="@string/profile_settings_notification" />
@@ -164,6 +174,8 @@
                 android:id="@+id/faq_profile_section"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
                 app:details="@string/profile_settings_faq_details"
                 app:iconResource="@drawable/help_settings"
                 app:itemTitle="@string/profile_settings_faq" />
@@ -172,6 +184,8 @@
                 android:id="@+id/logout_profile_section"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
                 app:details="@string/profile_settings_logout_details"
                 app:iconResource="@drawable/user_logout_settings"
                 app:itemTitle="@string/profile_settings_logout" />
