Added skip login button with functionality

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,6 +13,7 @@
         android:id="@+id/company_icon"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:contentDescription="@string/application_icon_description"
         android:src="@drawable/app_logo"
         app:layout_constraintBottom_toTopOf="@+id/company_name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +29,7 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textColor="#2F23B4"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/textfield_user"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="?attr/textInputFilledStyle"
-        android:hint="User"
+        android:hint="@string/user_login_textfield"
         android:textColorHint="@color/white"
         app:boxStrokeWidth="0dp"
         app:layout_constraintBottom_toTopOf="@id/textfield_password"
@@ -62,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="?attr/textInputFilledStyle"
-        android:hint="Password"
+        android:hint="@string/password_login_textfield"
         android:textColorHint="@color/white"
         app:boxStrokeWidth="0dp"
         app:endIconMode="password_toggle"
@@ -84,7 +85,7 @@
         android:id="@+id/check_rememberme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Remind me!"
+        android:text="@string/remind_me_login_checkbox"
         android:textColor="#2F23B4"
         app:layout_constraintBottom_toTopOf="@id/btn_login"
         app:layout_constraintEnd_toStartOf="@id/btn_forgotpassword"
@@ -96,7 +97,7 @@
         style="@style/Widget.Material3.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Forgot Password?"
+        android:text="@string/forgot_password_login_button"
         android:textColor="#2F23B4"
         app:layout_constraintBottom_toTopOf="@id/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
@@ -109,7 +110,7 @@
         style="@style/Widget.Material3.Button.ElevatedButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/loginbtn_login_button"
         android:backgroundTint="#2F23B4"
         android:textColor="@color/white"
         app:cornerRadius="10dp"
@@ -122,8 +123,8 @@
         android:id="@+id/txt_noAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:text="Don't have an account?"
+        android:text="@string/don_t_have_an_account_login_txt"
+        android:textColor="#2F23B4"
         app:layout_constraintBottom_toTopOf="@id/btn_google"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -146,7 +147,8 @@
         app:layout_constraintEnd_toStartOf="@id/btn_facebook"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txt_noAccount"
-        app:layout_constraintHorizontal_chainStyle="packed"/>
+        app:layout_constraintHorizontal_chainStyle="packed"
+        tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/btn_facebook"
@@ -164,20 +166,34 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/btn_google"
         app:layout_constraintTop_toBottomOf="@id/txt_noAccount"
-        />
+        tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/btn_signup"
         style="@style/Widget.Material3.Button.ElevatedButton"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        android:textColor="#2F23B4"
+        android:layout_marginEnd="5dp"
+        app:cornerRadius="10dp"
+        android:text="@string/sign_up_login_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_skip_login"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_google" />
+    <Button
+        android:id="@+id/btn_skip_login"
+        style="@style/Widget.Material3.Button.ElevatedButton"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
         android:textColor="#2F23B4"
         app:cornerRadius="10dp"
-        android:text="Sign Up"
+        android:text="@string/skip_for_now_login_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btn_signup"
         app:layout_constraintTop_toBottomOf="@id/btn_google" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
