--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -59,6 +59,13 @@
                     android:hint="@string/sheet_home_search_hint"
                     app:menu="@menu/search_bar_menu"
                     app:layout_anchor="@id/search_bar">
+                    <ProgressBar
+                        android:id="@+id/search_places_loading_spinner"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:visibility="gone"
+                        />
                     <ListView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
