Added feature to keep screen on while on route

--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <fragment
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,7 +8,7 @@
     android:id="@+id/map_fragment"
     tools:context="home.view.map.MapFragment"
     android:name="com.google.android.gms.maps.SupportMapFragment"
-    tools:layout="@layout/fragment_map">
+    tools:layout="com.google.android.gms.maps.SupportMapFragment">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
